opam-version: "2.0"
name: "satysfi-cross-ref-ext"
version: "0.1.0"
synopsis: "An extension of cross references in SATySFi"
description: """
An extension of cross references in SATySFi to allow to register a
value of a type other than string.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Taichi Uemura <t.uemura00@gmail.com>"
authors: "Taichi Uemura <t.uemura00@gmail.com>"
license: "MIT"
homepage: "https://github.com/uemurax/satysfi-cross-ref-ext"
bug-reports: "https://github.com/uemurax/satysfi-cross-ref-ext/issues"
dev-repo: "git+https://github.com/uemurax/satysfi-cross-ref-ext.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-base" {>= "1.3"}
  "satysfi-sexp" {>= "0.1.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "cross-ref-ext"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
